wip updates to bring TF and PT closer together

--- a/supervised/regression/artificial_neural_networks_pt.ipynb
+++ b/supervised/regression/artificial_neural_networks_pt.ipynb
@@ -5,7 +5,7 @@
    "id": "0b8b8456-07ad-4cbd-b7a6-e39fbcfbad83",
    "metadata": {},
    "source": [
-    "This tutorial will walk you through how to perform basic supervised machine learning (ML) tasks on different types of data that might be relevent for various scientific applications. First we must generate some representative data."
+    "This tutorial will walk you through how to perform a regression task using supervised machine learning (ML) methods on different types of data that might be relevent for various scientific applications. First we must generate some representative data."
    ]
   },
   {
@@ -45,7 +45,7 @@
    "source": [
     "For this first example, we will use the Friedman #1 regression function which takes the form: $$f(x)=10sin(\\pi x_1 x_2)+ 20(x_3−0.5)^2+10x_4 + 5x_5+ N(0,\\sigma) $$\n",
     "\n",
-    "In the following distribution we will create output with 9 features despite the Friedman #1 function only depending upon the first 5 features."
+    "In the following distribution we will create output with 10 features despite the Friedman #1 function only depending upon the first 5 features. We will also add noise to the data to see how well the neural network models can fit perform."
    ]
   },
   {
@@ -126,7 +126,9 @@
     "\n",
     "$$ x' = \\frac{x - \\mu(x)}{\\sigma(x)}$$\n",
     "\n",
-    "It is often useful to also create an inverse normalization function which can be used to convert the ML model predictions back to the physical space."
+    "We can do this manually, or use a number of pre-defined functions in sklearn. Here we will manually define the normalization functions, but in other tutorials we can explore different methods.\n",
+    "\n",
+    "When creating a normalization function, it is often useful to also create an inverse normalization function which can be used to convert the ML model predictions back to the physical space."
    ]
   },
   {
@@ -199,7 +201,9 @@
     "# Creating a ML Model\n",
     "Now that the data is preprocessed nicely, let's create a standard feed-forward neural network and train it to learn the relationship between the features (x) and the output (y).\n",
     "\n",
-    "The initial model will be have an input layer, three hidden layer with 64 neurons, and an output layer. The number of hidden layers, neurons per layer, and a variety of other so-called \"hyperparameters\" will have a noticable impact on model results. These values require extensive tuning depending on the problem at hand."
+    "The initial model will be have an input layer, three hidden layer with the number of neurons defined by the `width` variable, and an output layer.\n",
+    "\n",
+    "The number of hidden layers, neurons per layer, and a variety of other \"hyperparameters\" will have a noticable impact on model results. These values can require extensive tuning depending on the problem at hand."
    ]
   },
   {
@@ -216,20 +220,21 @@
       "Layer (type:depth-idx)                   Output Shape              Param #\n",
       "==========================================================================================\n",
       "ANN                                      [1, 1]                    --\n",
-      "├─Linear: 1-1                            [1, 32]                   352\n",
-      "├─Linear: 1-2                            [1, 32]                   1,056\n",
-      "├─Linear: 1-3                            [1, 32]                   1,056\n",
-      "├─Linear: 1-4                            [1, 1]                    33\n",
+      "├─Linear: 1-1                            [1, 8]                    88\n",
+      "├─Linear: 1-2                            [1, 8]                    72\n",
+      "├─Linear: 1-3                            [1, 8]                    72\n",
+      "├─Linear: 1-4                            [1, 8]                    72\n",
+      "├─Linear: 1-5                            [1, 1]                    9\n",
       "==========================================================================================\n",
-      "Total params: 2,497\n",
-      "Trainable params: 2,497\n",
+      "Total params: 313\n",
+      "Trainable params: 313\n",
       "Non-trainable params: 0\n",
       "Total mult-adds (Units.MEGABYTES): 0.00\n",
       "==========================================================================================\n",
       "Input size (MB): 0.00\n",
       "Forward/backward pass size (MB): 0.00\n",
-      "Params size (MB): 0.01\n",
-      "Estimated Total Size (MB): 0.01\n",
+      "Params size (MB): 0.00\n",
+      "Estimated Total Size (MB): 0.00\n",
       "==========================================================================================\n"
      ]
     }
@@ -254,6 +259,7 @@
     "        # Bulk layers\n",
     "        self.bulk1 = nn.Linear(self.width, self.width)\n",
     "        self.bulk2 = nn.Linear(self.width, self.width)\n",
+    "        self.bulk3 = nn.Linear(self.width, self.width)\n",
     "        # Output layer with one feature\n",
     "        self.output_layer = nn.Linear(self.width, 1)\n",
     "        \n",
@@ -268,17 +274,22 @@
     "        x = F.relu(x)\n",
     "        x = self.bulk2(x)\n",
     "        x = F.relu(x)\n",
+    "        x = self.bulk3(x)\n",
+    "        x = F.relu(x)\n",
     "\n",
     "        x = self.output_layer(x)\n",
     "        return x\n",
     "\n",
+    "# Set some model parameters\n",
+    "width = 8\n",
+    "learning_rate = 1e-3\n",
     "\n",
-    "model = ANN(num_feat=n_feats, width=32)\n",
+    "model = ANN(num_feat=n_feats, width=width)\n",
     "print(summary(model, input_size=(1, n_feats)))\n",
     "\n",
     "# Define the loss function and optimizer for training\n",
     "criterion = nn.MSELoss(reduction=\"sum\")\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-3)"
+    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)"
    ]
   },
   {
